# chatgpt-web-automation

./: .gitignore  Makefile  README.md  pyproject.toml
requirements/: requirements.in  requirements.txt
src/: client.py  config.py  exceptions.py  main.py
