[project]
name = "chatgpt-web-automation"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11,<4.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
src_paths = ["src"]
virtual_env = ".venv"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["C", "E", "F", "I", "N", "NPY", "PD", "UP", "W", ]
ignore = ["E203", "N803"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-local-folder = ["src", "component", "endpoint", "experiment"]
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.12"
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
#strict = true
warn_redundant_casts = true
warn_unused_configs = true
# TODO: change false to true
warn_unused_ignores = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::_pytest.warning_types.PytestWarning",
    "ignore::DeprecationWarning",
]
pythonpath = [
    "src"
]
